Correcion en palabras

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                                 <div class="bar-1 mb-4">
                                     <div class="d-flex flex-row justify-content-between">
                                         <p class="font-ram font-size-16">Photoshop</p>
-                                        <span class="font-ram font-size-16">80%</span>
+                                        <span class="font-ram font-size-16">70%</span>
                                     </div>
                                     <div class="progress" style="height: 3px;">
-                                        <div class="progress-bar bgcolor-black" role="progressbar" style="width:80%"></div>
+                                        <div class="progress-bar bgcolor-black" role="progressbar" style="width:70%"></div>
                                     </div>
                                 </div>
                                 <div class="bar-1 mb-4">
@@ -210,8 +210,8 @@
                             </div>
                             <div class="col-sm-4 my-4 text-center">
                                 <div class="footer-title">
-                                    <a href="#" class="navbar-brand font-staat font-size-40 text-dark">Rony</a>
-                                    <p class="description font-os font-size-16 text-black-50 text-uppercase">full stack devepelop</p>
+                                    <a href="#" class="navbar-brand font-staat font-size-40 text-dark">Rony Díaz</a>
+                                    <p class="description font-os font-size-16 text-black-50 text-uppercase">full stack developer</p>
                                 </div>
                             </div>
                             <div class="col-sm-4 my-5 text-center">
