Correcion en cabezara

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="banner-area">
                         <div class="author text-center">
                             <h1 class="text-white font-staat font-size-40 text-uppercase py-3">RONY DIAZ</h1>
-                            <h5 class="text-white font-ram font-size-27">i'm Full stack developer</h5>
+                            <h5 class="text-white font-ram font-size-27">I'm Full stack developer</h5>
                         </div>
                     </div>
                 </section>
